[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oslex"
version = "0.1.2"
authors = [
	{ name="Tamás PEREGI", email="petamas@gmail.com" },
]
description = "OS-independent wrapper for shlex and mslex"
readme = "README.md"
# mslex is supposed to support >=3.5, but it has an accidental f-string, making it unusable on 3.5
# see https://github.com/smoofra/mslex/issues/1
requires-python = ">=3.6"
dependencies = [
  "mslex",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]

[project.urls]
"Homepage" = "https://github.com/petamas/oslex"
"Bug Tracker" = "https://github.com/petamas/oslex/issues"
